<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wzhong3-StupidCounter</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add a counter</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_rename">Rename</string>
    <string name="button_reset">Reset</string>
    <string name="button_remove">Remove</string>
    <string name="button_summarize">Summarize</string>
    <string name="button_increment">Increment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_stat">StatActivity</string>
    <string name="button_min">Min</string>
    <string name="button_hour">Hour</string>
    <string name="button_day">Day</string>
    <string name="button_month">Month</string>
    <string name="textview_stat">Aggregate total counts by:</string>
    <string name="order">Sort</string>
    <string name="button_week">Week</string>

</resources>
