<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView 
        android:id="@+id/listview_stat"
        android:layout_width="fill_parent"
        android:layout_weight="10"
        android:layout_height="0dp"/>
    
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/textview_stat"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_min"
            android:onClick="OrderByMin"/>
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hour"
            android:onClick="OrderByHour"/>
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_day"
            android:onClick="OrderByDay"/>
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_month"
            android:onClick="OrderByMonth"/>
    </LinearLayout>

</LinearLayout>
