<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <TextView android:id="@+id/name_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="30sp"/>
        
    </RelativeLayout>
    
    
    <LinearLayout
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_rename"
        	android:onClick="rename" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            android:onClick="reset" />
        
    </LinearLayout>
    <LinearLayout 
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_remove"
        	android:onClick="remove" />
        
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_summarize" />
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="150dp">
        
        <TextView android:id ="@+id/text_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="90sp"/>
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_weight="5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button android:id ="@+id/button_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="increment"
            android:textSize="60sp"
            android:text="@string/button_increment" />  
    </RelativeLayout>
    
    
    
</LinearLayout>